--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>jon</title>
+      <title>Tech Sign</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -46,7 +46,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                              <a href="index.html"><img src="images/TECH SIGN LOGO.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -68,17 +68,19 @@
                                  <a class="nav-link" href="products.html">Products </a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="blog.html">Blog</a>
+                                 <a class="nav-link" href="blog.html">Gallery</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contact</a>
                               </li>
+                              <!--
                               <li class="nav-item d_none">
                                  <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
                               </li>
                               <li class=" d_none get_btn">
                                  <a  href="#">Get a quote</a>
                               </li>
+                              -->
                            </ul>
                         </div>
                      </nav>
@@ -95,8 +97,8 @@
             <div class="row">
                <div class="col-md-12 ">
                   <div class="text-bg">
-                     <h1>FARMING COMPANY</h1>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it</p>
+                     <h1>SIGN COMPANY</h1>
+                     <p>Our professional staff can help design your sign and help define the material, size, color and location of your business sign based on the scope of your event or project.</p>
                      <a href="#">Discover</a>
                   </div>
                </div>
@@ -110,17 +112,20 @@
             <div class="row">
                <div class="col-md-4">
                   <div class="box_text">
-                     <figure><img src="images/img1.jpg" alt="#"/></figure>
+                     <!-- 양 -->
+                     <figure><img src="images/national.jpg" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="box_text">
-                     <figure><img src="images/img2.jpg" alt="#"/></figure>
+                     <!-- 벼 -->
+                     <figure><img src="images/honda.jpg" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="box_text">
-                     <figure><img src="images/img3.jpg" alt="#"/></figure>
+                     <!-- 블랙 포도 -->
+                     <figure><img src="images/coffee.jpg" alt="#"/></figure>
                   </div>
                </div>
             </div>
@@ -205,7 +210,8 @@
                </div>
                <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12">
                   <div class="choose_img">
-                     <figure><img src="images/food.jpg" alt="#"/></figure>
+                     <!-- 칵테일 포도 -->
+                     <figure><img src="images/SLB3000.jpg" alt="#"/></figure>
                   </div>
                </div>
             </div>
@@ -235,32 +241,37 @@
             <div class="row">
                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 padding_left0">
                   <div class="product_box">
-                     <figure><img src="images/product1.jpg" alt="#"/></figure>
-                     <h3 class="black">vegetable</h3>
+                     <!-- 야채 -->
+                     <figure><img src="images/national.jpg" alt="#"/></figure>
+                     <h3 class="black">Logo & Sign</h3>
                   </div>
                </div>
                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
                   <div class="product_box">
-                     <figure><img src="images/product2.jpg" alt="#"/></figure>
-                     <h3 >weat</h3>
+                     <!-- 벼 -->
+                     <figure><img src="images/hbaf.jpg" alt="#"/></figure>
+                     <h3 >Vinyl With Face</h3>
                   </div>
                </div>
                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 padding_right0">
                   <div class="product_box">
-                     <figure><img src="images/product3.jpg" alt="#"/></figure>
-                     <h3>fruit</h3>
+                     <!-- 과일 -->
+                     <figure><img src="images/cgv.jpg" alt="#"/></figure>
+                     <h3>Trim Cap Less</h3>
                   </div>
                </div>
                <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 padding_left0">
                   <div class="product_box">
-                     <figure><img src="images/product4.jpg" alt="#"/></figure>
-                     <h3>sunflowere</h3>
+                     <!-- 해바라기 -->
+                     <figure><img src="images/coffee.jpg" alt="#"/></figure>
+                     <h3>Back Light</h3>
                   </div>
                </div>
                <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 padding_right0">
                   <div class="product_box">
-                     <figure><img src="images/product5.jpg" alt="#"/></figure>
-                     <h3>Livestock</h3>
+                     <!-- 양 -->
+                     <figure><img src="images/honda.jpg" alt="#"/></figure>
+                     <h3>Logo & Sign</h3>
                   </div>
                </div>
             </div>
@@ -273,7 +284,8 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>People Says About Farm</h2>
+                     <h2>People Says About Tech Sign</h2>
+                     
                   </div>
                </div>
             </div>
@@ -292,8 +304,8 @@
                                  <div class="row">
                                     <div class="col-md-12">
                                        <div class="test_box">
-                                          <i><img src="images/tes1.png" alt="#"/></i>
-                                          <h4>jhone Du</h4>
+                                          <i><img src="images/p1.png" alt="#"/></i>
+                                          <h4>Andrew Du</h4>
                                           <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</p>
                                        </div>
                                     </div>
@@ -307,8 +319,8 @@
                                  <div class="row">
                                     <div class="col-md-12">
                                        <div class="test_box">
-                                          <i><img src="images/tes1.png" alt="#"/></i>
-                                          <h4>jhone Du</h4>
+                                          <i><img src="images/p2.jpg" alt="#"/></i>
+                                          <h4>Daniel Williams</h4>
                                           <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</p>
                                        </div>
                                     </div>
@@ -322,8 +334,8 @@
                                  <div class="row">
                                     <div class="col-md-12">
                                        <div class="test_box">
-                                          <i><img src="images/tes1.png" alt="#"/></i>
-                                          <h4>jhone Du</h4>
+                                          <i><img src="images/p3.jpg" alt="#"/></i>
+                                          <h4>Jenny Park</h4>
                                           <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</p>
                                        </div>
                                     </div>
@@ -357,6 +369,7 @@
                         <h2>Contact Us</h2>
                      </div>
                   </div>
+                  <!--
                   <div class="col-md-12">
                      <form id="request" class="main_form">
                         <div class="row">
@@ -383,17 +396,20 @@
                            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                               <button class="send_btn">Send</button>
                            </div>
+                           
                         </div>
                      </form>
                   </div>
-                  <div class="col-md-3 border_right">
+                  -->
+                   <div class="col-md-3 border_right">
                      <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
-                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +71 9087654321</li>
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com</li>
+                        <li><a href="https://maps.app.goo.gl/MfSzaPDt4zGPYB989"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
+                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +1 678-549-3432</li>
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>jay.techsign@gmail.com</li>
                      </ul>
                   </div>
-                  <div class="col-md-3 border_right">
+                  <!-- 
+                     <div class="col-md-3 border_right">
                      <h3>Useful Link</h3>
                      <ul class="link">
                         <li><a href="#">humour, or </a></li>
@@ -403,16 +419,18 @@
                         <li><a href="#">believable. If   </a></li>
                      </ul>
                   </div>
+               -->
                   <div class="col-md-3 border_right">
                      <h3>Menus</h3>
                      <ul class="link">
 <li><a href="index.html">Home</a></li>                             
 <li><a href="about.html">About</a></li>                                                     
 <li><a href="products.html">Products</a></li>                             
-<li><a href="blog.html">Blog</a></li>
+<li><a href="blog.html">Gallery</a></li>
 <li><a href="contact.html">Contact</a></li>
                      </ul>
                   </div>
+                  <!--
                   <div class="col-md-3">
                      <form class="bottom_form">
                         <h3>Newsletter</h3>
@@ -420,13 +438,14 @@
                         <button class="sub_btn">subscribe</button>
                      </form>
                   </div>
+                  -->
                </div>
             </div>
             <div class="copyright">
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>Copyright 2019 All Right Reserved By <a href="https://html.design/"> Free  html Templates</a></p>
+                        <p>Copyright 2022 All Right Reserved</p>
                      </div>
                   </div>
                </div>
@@ -444,4 +463,5 @@
       <script src="js/custom.js"></script>
    </body>
 </html>
+<!-- 여기 업뎃해야함 -->
 
