--- a/products.html
+++ b/products.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>jon</title>
+      <title>Tech Sign</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -46,7 +46,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                              <a href="index.html"><img src="images/TECH SIGN LOGO.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -68,17 +68,19 @@
                                  <a class="nav-link" href="products.html">Products </a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="blog.html">Blog</a>
+                                 <a class="nav-link" href="blog.html">Gallery</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contact</a>
                               </li>
+                              <!--
                               <li class="nav-item d_none">
                                  <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
                               </li>
                               <li class=" d_none get_btn">
                                  <a  href="#">Get a quote</a>
                               </li>
+                              -->
                            </ul>
                         </div>
                      </nav>
@@ -104,32 +106,37 @@
             <div class="row">
                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 padding_left0">
                   <div class="product_box">
-                     <figure><img src="images/product1.jpg" alt="#"/></figure>
-                     <h3 class="black">vegetable</h3>
+                     <!-- 야채 -->
+                     <figure><img src="images/national.jpg" alt="#"/></figure>
+                     <h3 class="black">Logo & Sign</h3>
                   </div>
                </div>
                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
                   <div class="product_box">
-                     <figure><img src="images/product2.jpg" alt="#"/></figure>
-                     <h3 >weat</h3>
+                     <!-- 벼 -->
+                     <figure><img src="images/hbaf.jpg" alt="#"/></figure>
+                     <h3 >Vinyl With Face</h3>
                   </div>
                </div>
                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 padding_right0">
                   <div class="product_box">
-                     <figure><img src="images/product3.jpg" alt="#"/></figure>
-                     <h3>fruit</h3>
+                     <!-- 과일 -->
+                     <figure><img src="images/cgv.jpg" alt="#"/></figure>
+                     <h3>Trim Cap Less</h3>
                   </div>
                </div>
                <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 padding_left0">
                   <div class="product_box">
-                     <figure><img src="images/product4.jpg" alt="#"/></figure>
-                     <h3>sunflowere</h3>
+                     <!-- 해바라기 -->
+                     <figure><img src="images/coffee.jpg" alt="#"/></figure>
+                     <h3>Back Light</h3>
                   </div>
                </div>
                <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 padding_right0">
                   <div class="product_box">
-                     <figure><img src="images/product5.jpg" alt="#"/></figure>
-                     <h3>Livestock</h3>
+                     <!-- 양 -->
+                     <figure><img src="images/honda.jpg" alt="#"/></figure>
+                     <h3>Logo & Sign</h3>
                   </div>
                </div>
             </div>
@@ -146,6 +153,7 @@
                         <h2>Contact Us</h2>
                      </div>
                   </div>
+                  <!--
                   <div class="col-md-12">
                      <form id="request" class="main_form">
                         <div class="row">
@@ -172,17 +180,20 @@
                            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                               <button class="send_btn">Send</button>
                            </div>
+                           
                         </div>
                      </form>
                   </div>
-                  <div class="col-md-3 border_right">
+                  -->
+                   <div class="col-md-3 border_right">
                      <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
-                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +71 9087654321</li>
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com</li>
+                        <li><a href="https://maps.app.goo.gl/MfSzaPDt4zGPYB989"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
+                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +1 678-549-3432</li>
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>jay.techsign@gmail.com</li>
                      </ul>
                   </div>
-                  <div class="col-md-3 border_right">
+                  <!-- 
+                     <div class="col-md-3 border_right">
                      <h3>Useful Link</h3>
                      <ul class="link">
                         <li><a href="#">humour, or </a></li>
@@ -192,16 +203,18 @@
                         <li><a href="#">believable. If   </a></li>
                      </ul>
                   </div>
+               -->
                   <div class="col-md-3 border_right">
                      <h3>Menus</h3>
                      <ul class="link">
 <li><a href="index.html">Home</a></li>                             
 <li><a href="about.html">About</a></li>                                                     
 <li><a href="products.html">Products</a></li>                             
-<li><a href="blog.html">Blog</a></li>
+<li><a href="blog.html">Gallery</a></li>
 <li><a href="contact.html">Contact</a></li>
                      </ul>
                   </div>
+                  <!--
                   <div class="col-md-3">
                      <form class="bottom_form">
                         <h3>Newsletter</h3>
@@ -209,13 +222,14 @@
                         <button class="sub_btn">subscribe</button>
                      </form>
                   </div>
+                  -->
                </div>
             </div>
             <div class="copyright">
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>Copyright 2019 All Right Reserved By <a href="https://html.design/"> Free  html Templates</a></p>
+                        <p>Copyright 2022 All Right Reserved</p>
                      </div>
                   </div>
                </div>
