--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>jon</title>
+      <title>Tech Sign</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -46,7 +46,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                              <a href="index.html"><img src="images/TECH SIGN LOGO.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -68,17 +68,19 @@
                                  <a class="nav-link" href="products.html">Products </a>
                               </li>
                               <li class="nav-item active">
-                                 <a class="nav-link" href="blog.html">Blog</a>
+                                 <a class="nav-link" href="blog.html">Gallery</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contact</a>
                               </li>
+                              <!--
                               <li class="nav-item d_none">
                                  <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
                               </li>
                               <li class=" d_none get_btn">
                                  <a  href="#">Get a quote</a>
                               </li>
+                              -->
                            </ul>
                         </div>
                      </nav>
@@ -97,7 +99,7 @@
             <div class="row">
                <div class="col-md-8">
                   <div class="titlepage">
-                     <h2>Our Blog</h2>
+                     <h2>Why Choose Us? </h2>
                      <p>there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined  </p>
                   </div>
                </div>
@@ -105,65 +107,65 @@
          </div>
          <div class="container-fluid">
             <div class="row d_flex">
-              <div class="col-xl-7 col-lg-7 col-md-12 col-sm-12">
-               <div class="padding_with">
-               <div class="row">
-                  <div class="col-md-6 padding_bottom">
-                     <div class="choose_box">
-                        <i><img src="images/icon1.png" alt="#"/></i>
-                        <div class="choose_text">
-                           <h3>Excellent Service</h3>
-                           <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
+               <div class="col-xl-7 col-lg-7 col-md-12 col-sm-12">
+                  <div class="padding_with">
+                     <div class="row">
+                        <div class="col-md-6 padding_bottom">
+                           <div class="choose_box">
+                              <i><img src="images/icon1.png" alt="#"/></i>
+                              <div class="choose_text">
+                                 <h3>Excellent Service</h3>
+                                 <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
+                              </div>
+                           </div>
                         </div>
-                     </div>
-                  </div>
-                  <div class="col-md-6 padding_bottom">
-                     <div class="choose_box">
-                        <i><img src="images/icon2.png" alt="#"/></i>
-                        <div class="choose_text">
-                           <h3>Clean Working</h3>
-                           <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
+                        <div class="col-md-6 padding_bottom">
+                           <div class="choose_box">
+                              <i><img src="images/icon2.png" alt="#"/></i>
+                              <div class="choose_text">
+                                 <h3>Clean Working</h3>
+                                 <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
+                              </div>
+                           </div>
                         </div>
-                     </div>
-                  </div>
-                  <div class="col-md-6 padding_bottom2">
-                     <div class="choose_box">
-                        <i><img src="images/icon3.png" alt="#"/></i>
-                        <div class="choose_text">
-                           <h3>Quality And Reliability</h3>
-                           <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
+                        <div class="col-md-6 padding_bottom2">
+                           <div class="choose_box">
+                              <i><img src="images/icon3.png" alt="#"/></i>
+                              <div class="choose_text">
+                                 <h3>Quality And Reliability</h3>
+                                 <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
+                              </div>
+                           </div>
                         </div>
-                     </div>
-                  </div>
-                  <div class="col-md-6">
-                     <div class="choose_box">
-                        <i><img src="images/icon4.png" alt="#"/></i>
-                        <div class="choose_text">
-                           <h3>Expert Farmer</h3>
-                           <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
+                        <div class="col-md-6">
+                           <div class="choose_box">
+                              <i><img src="images/icon4.png" alt="#"/></i>
+                              <div class="choose_text">
+                                 <h3>Expert Farmer</h3>
+                                 <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
+                              </div>
+                           </div>
                         </div>
                      </div>
                   </div>
                </div>
-
+               <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12">
+                  <div class="choose_img">
+                     <!-- 칵테일 포도 -->
+                     <figure><img src="images/SLB3000.jpg" alt="#"/></figure>
+                  </div>
                </div>
             </div>
-            <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12">
-               <div class="choose_img">
-                  <figure><img src="images/food.jpg" alt="#"/></figure>
+         </div>
+         <div class="container">
+            <div class="row">
+               <div class="col-md-5">
+                  <a class="read_more" href="#">Read More</a>
                </div>
             </div>
          </div>
       </div>
-      <div class="container">
-         <div class="row">
-            <div class="col-md-5">
-                <a class="read_more" href="#">Read More</a>
-            </div>
-         </div>
       </div>
-      </div>
-   </div>
       <!-- end choose  section -->
 
       <!--  footer -->
@@ -176,6 +178,7 @@
                         <h2>Contact Us</h2>
                      </div>
                   </div>
+                  <!--
                   <div class="col-md-12">
                      <form id="request" class="main_form">
                         <div class="row">
@@ -206,15 +209,16 @@
                         </div>
                      </form>
                   </div>
-                  
+                  -->
                    <div class="col-md-3 border_right">
                      <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
-                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +71 9087654321</li>
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com</li>
+                        <li><a href="https://maps.app.goo.gl/MfSzaPDt4zGPYB989"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
+                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +1 678-549-3432</li>
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>jay.techsign@gmail.com</li>
                      </ul>
                   </div>
-                  <div class="col-md-3 border_right">
+                  <!-- 
+                     <div class="col-md-3 border_right">
                      <h3>Useful Link</h3>
                      <ul class="link">
                         <li><a href="#">humour, or </a></li>
@@ -224,16 +228,18 @@
                         <li><a href="#">believable. If   </a></li>
                      </ul>
                   </div>
+               -->
                   <div class="col-md-3 border_right">
                      <h3>Menus</h3>
                      <ul class="link">
 <li><a href="index.html">Home</a></li>                             
 <li><a href="about.html">About</a></li>                                                     
 <li><a href="products.html">Products</a></li>                             
-<li><a href="blog.html">Blog</a></li>
+<li><a href="blog.html">Gallery</a></li>
 <li><a href="contact.html">Contact</a></li>
                      </ul>
                   </div>
+                  <!--
                   <div class="col-md-3">
                      <form class="bottom_form">
                         <h3>Newsletter</h3>
@@ -241,13 +247,14 @@
                         <button class="sub_btn">subscribe</button>
                      </form>
                   </div>
+                  -->
                </div>
             </div>
             <div class="copyright">
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>Copyright 2019 All Right Reserved By <a href="https://html.design/"> Free  html Templates</a></p>
+                        <p>Copyright 2022 All Right Reserved</p>
                      </div>
                   </div>
                </div>
