--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>jon</title>
+      <title>Tech Sign</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -46,7 +46,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                              <a href="index.html"><img src="images/TECH SIGN LOGO.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -68,17 +68,19 @@
                                  <a class="nav-link" href="products.html">Products </a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="blog.html">Blog</a>
+                                 <a class="nav-link" href="blog.html">Gallery</a>
                               </li>
                               <li class="nav-item active">
                                  <a class="nav-link" href="contact.html">Contact</a>
                               </li>
+                              <!--
                               <li class="nav-item d_none">
                                  <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
                               </li>
                               <li class=" d_none get_btn">
                                  <a  href="#">Get a quote</a>
                               </li>
+                              -->
                            </ul>
                         </div>
                      </nav>
@@ -101,6 +103,7 @@
                         <h2>Contact Us</h2>
                      </div>
                   </div>
+                  <!--
                   <div class="col-md-12">
                      <form id="request" class="main_form">
                         <div class="row">
@@ -131,15 +134,16 @@
                         </div>
                      </form>
                   </div>
-                  
+                  -->
                    <div class="col-md-3 border_right">
                      <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
-                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +71 9087654321</li>
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com</li>
+                        <li><a href="https://maps.app.goo.gl/MfSzaPDt4zGPYB989"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
+                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +1 678-549-3432</li>
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>jay.techsign@gmail.com</li>
                      </ul>
                   </div>
-                  <div class="col-md-3 border_right">
+                  <!-- 
+                     <div class="col-md-3 border_right">
                      <h3>Useful Link</h3>
                      <ul class="link">
                         <li><a href="#">humour, or </a></li>
@@ -149,16 +153,18 @@
                         <li><a href="#">believable. If   </a></li>
                      </ul>
                   </div>
+               -->
                   <div class="col-md-3 border_right">
                      <h3>Menus</h3>
                      <ul class="link">
 <li><a href="index.html">Home</a></li>                             
 <li><a href="about.html">About</a></li>                                                     
 <li><a href="products.html">Products</a></li>                             
-<li><a href="blog.html">Blog</a></li>
+<li><a href="blog.html">Gallery</a></li>
 <li><a href="contact.html">Contact</a></li>
                      </ul>
                   </div>
+                  <!--
                   <div class="col-md-3">
                      <form class="bottom_form">
                         <h3>Newsletter</h3>
@@ -166,13 +172,14 @@
                         <button class="sub_btn">subscribe</button>
                      </form>
                   </div>
+                  -->
                </div>
             </div>
             <div class="copyright">
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>Copyright 2019 All Right Reserved By <a href="https://html.design/"> Free  html Templates</a></p>
+                        <p>Copyright 2022 All Right Reserved</p>
                      </div>
                   </div>
                </div>
